# ChangeLog for app-misc/hubugs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Jun 2011; James Rowe <jnrowe@gmail.com> hubugs-0.9.1.ebuild:
  Keyworded ~x86.

*hubugs-0.9.1 (24 Jun 2011)

  24 Jun 2011; James Rowe <jnrowe@gmail.com> +hubugs-0.9.1.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [402].
