@@ -1,15 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
+DIST hubugs-0.10.0.tar.gz 39263 RMD160 9737494373aa0b19477fe067d02cc571625a5b02 SHA1 4a3f32a753703403c0d158af7da4cae2bc29902c SHA256 addba7b73350def4529614cdaca0226440794a59d100b690263f41fe33de87b4
 DIST hubugs-0.9.1.tar.gz 38347 RMD160 ee9e957451a279cdfe504fdb3e8673e0c3156a0d SHA1 9eee23d0302b62bf1cf4c507d728c11132544a79 SHA256 bfbf9ba956a0fdef27205914e0bb18825277b9053a39f1d917ced54a8ed9009a
+EBUILD hubugs-0.10.0.ebuild 1049 RMD160 b6581992c6a7ee696d10d47bc5db0a96a02febbc SHA1 6bd5c04c02270cf6466ca763963df917412f38e5 SHA256 c4499194d93d07b768d31b940f024195f3771a155c5c1c3e323291a6031b3d83
 EBUILD hubugs-0.9.1.ebuild 1049 RMD160 b6581992c6a7ee696d10d47bc5db0a96a02febbc SHA1 6bd5c04c02270cf6466ca763963df917412f38e5 SHA256 c4499194d93d07b768d31b940f024195f3771a155c5c1c3e323291a6031b3d83
-MISC ChangeLog 354 RMD160 1d7cfcabc117689c58f10baaca60433dd3b98430 SHA1 89d6b6ad6a7a0fd0387e5120c7f8891a12b8f29f SHA256 d92b316db23793619420b3c3b41eb8523cfb0219143869b905a053b130716211
+MISC ChangeLog 475 RMD160 b5733651db443747f66fb462226b2fc9e693ae96 SHA1 5cd9b24368a6e90ba8dcbbb6e6f9abb03e37b667 SHA256 4307f476412cb6acdbbdc1973d9e9283998a023ad3b66e42d52182e4aadf9d14
 MISC metadata.xml 582 RMD160 1c9801955e0b356756bec649ceefffcdad41b9a1 SHA1 03e28b3aa274de8005f2d53b94e248bf8c5ba01b SHA256 11ac1c2ebcde958f5ec6d7455c02d1b4a7126462a02af297523b461f10300314
 MISC watch 28 RMD160 077ab1f79eca0c94ea2ce0180658eecdfdc75209 SHA1 feefe92427a000287454d84876769e4d1966d48d SHA256 a4eda7491fdb5be0331b7bf31b60296acb913baf04bf6c4532ffb58ad5929f12
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4IgsAACgkQzJrj3cAXR0mfjACfUObni6+GxK74HnO9Ym/qScXO
-jzsAoIaowYFXgj+5g1OKYdOGSy+IHc0t
-=lsNb
+iEYEAREKAAYFAk4KOoMACgkQzJrj3cAXR0mnzQCeK3sB4Jilt0xBBykEYturYNuy
+6HMAn1VP77bbmYmlOUaGBjUW5QRIkwto
+=m8CD
 -----END PGP SIGNATURE-----
