@@ -34,6 +34,8 @@
 * dev-python/sure-0.5.1                      x86 SCHEDULED: <2011-07-27 Wed>
 * app-misc/hubugs-0.9.1                      x86 SCHEDULED: <2011-07-27 Wed>
 * dev-python/attest-0.5.2                    x86 SCHEDULED: <2011-07-27 Wed>
+* app-misc/hubugs-0.10.0                   amd64 SCHEDULED: <2011-07-28 Thu>
+* app-misc/hubugs-0.10.0                     x86 SCHEDULED: <2011-07-28 Thu>
 * dev-util/ditz-0.5-r1                       x86 SCHEDULED: <2011-08-05 Fri>
 * dev-util/ditz-0.5-r1                     amd64 SCHEDULED: <2011-08-05 Fri>
 * dev-python/rstctl-0.4                    amd64 SCHEDULED: <2011-08-08 Mon>
