@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*hubugs-0.10.0 (28 Jun 2011)
+
+  28 Jun 2011; James Rowe <jnrowe@gmail.com> +hubugs-0.10.0.ebuild:
+  Version bump [411].
+
   27 Jun 2011; James Rowe <jnrowe@gmail.com> hubugs-0.9.1.ebuild:
   Keyworded ~x86.
 
